# fastapi_deepeval_chatbot

./: .env.example  .gitignore  .pre-commit-config.yaml  PROJECT_OVERVIEW.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 1eb990de8c6e_add_model_name_to_runs.py  325053741cd0_initial_tables.py  3f1a83e8b882_add_model_name_to_runs.py  86195f515103_initial_tables.py  92a58f1798c6_fix_initial_tables.py  a32d7e176b23_add_finished_at_to_runs.py  f34b888dfd62_add_model_name_to_evaluation_run.py
src/api/: main.py
src/api/endpoints/: rag.py
src/core/: config.py  db.py
src/metrics/: russian.py
src/models/: evaluation.py
src/schemas/: models.py
src/services/: dataset_service.py  evaluation_service.py
tests/: verify_analytics.py  verify_mixed_quality.py  verify_pipeline.py  verify_upload.py
